# BCI_Project

./: .gitignore  how_to_analysis.txt  pyproject.toml
analysis/GUI_data/: run2_vi.txt  run3_ki.txt  sample_1.txt
analysis/data/rest/STFT/: rest_data_ch0_0.csv  rest_data_ch0_1.csv  rest_data_ch0_2.csv  rest_data_ch0_3.csv  rest_data_ch0_4.csv  rest_data_ch0_5.csv  rest_data_ch1_0.csv  rest_data_ch1_1.csv  rest_data_ch1_2.csv  rest_data_ch1_3.csv  rest_data_ch1_4.csv  rest_data_ch1_5.csv
analysis/data/rest/Wavelet/: rest_data_ch0_0.csv  rest_data_ch0_1.csv  rest_data_ch0_2.csv  rest_data_ch0_3.csv  rest_data_ch0_4.csv  rest_data_ch0_5.csv  rest_data_ch1_0.csv  rest_data_ch1_1.csv  rest_data_ch1_2.csv  rest_data_ch1_3.csv  (+2 more)
analysis/src/: STFT_plot_2.py  STFT_plot_3.py  STFT_plot_4.py  fft_plot.py  raw_plot_2.py
archive/lib/: filter_func.py
archive/src/: STFT_plot_1.py  STFT_plot_3.py  raw_plot.py
bci/analysis/: raw_plot_actual.py  raw_plot_practice.py  tl_plot_raw.py
bci/analysis/fft_plot/: fft_plot_actual.py  fft_plot_practice.py  fft_plot_practice_bar.py  fft_test.py
bci/analysis/raw/: raw_plot_actual.py  raw_plot_practice.py
bci/analysis/raw_plot/: raw_plot_actual.py  raw_plot_practice.py
bci/analysis/stft/: stft_plot_actual.py  stft_plot_practice.py
bci/lib/: calc_diff.py  fig_setup.py  filter_func.py
bci/src/: ERD_Wavelet copy.py  test.py  traffic_light_exp.py
lib/: calc_diff.py  fig_setup.py  power_func.py
src/analysis/: test.py
src/exp/: ERD_STFT.py  ERD_Wavelet.py  test.py  traffic_light_exp.py
src/result/: analysis_prosedure.txt
(+477 files in other folders)
