[tool.poetry]
name = "BCI_Research_Project"
version = "0.1.0"
description = "This is project for my BCI research project."
authors = ["Saito Hayato <keep.forward1001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
brainflow = "^5.0.1"
pylsl = "^1.16.0"
PyWavelets = "^1.3.0"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
